testData/annotation.semantic/UcFirstClassName2.hx
class test extends <error descr="Type name must start by upper case">test1</error> {
  public function demo(a:<error descr="Type name must start by upper case">test</error>, b:<error descr="Type name must start by upper case">test2</error>, c:<error descr="Type name must start by upper case">string</error>) {

  }
}